2004-08-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Added user's roster page

	* src/mod_irc/mod_irc_connection.erl: Bugfix

2004-08-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/tls/tls.erl: Added recv_data/2 function

	* src/jlib.erl: Added NS_TLS macro

	* src/ejabberd_receiver.erl: Support for STARTTLS
	* src/ejabberd_c2s.erl: Likewise

2004-07-30  Alexey Shchepin  <alexey@sevcom.net>

	* examples/extauth/check_pass_null.pl: A reference "null"
	implementation of external authentification script (thanks to Leif
	Johansson)

	* src/extauth.erl: Support for external authentification
	(thanks to Leif Johansson)
	* src/ejabberd_auth.erl: Likewise

	* src/mod_vcard_ldap.erl: A drop-in replacement for mod_vcard.erl
	which uses ldap for JUD and vCard (thanks to Leif Johansson)

2004-07-28  Alexey Shchepin  <alexey@sevcom.net>

	* src/tls/tls_drv.c: Added freeing of SSL stuff

	* src/xml_stream.erl: Added start/2 function
	* src/ejabberd_receiver.erl: Now using xml_stream:start/2

2004-07-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Support for TLS library (not completed)

	* src/tls/tls_drv.c: Updated to return binaries instead of lists
	* src/tls/tls.erl: Likewise

2004-07-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/tls/tls.erl: Updated

2004-07-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/tls/: Library for TLS support (not completed)

	* src/ejabberd_auth.erl: Now uses two LDAP connections

	* src/ejabberd_c2s.erl: Return resource on get_presence request
	(thanks to Mickael Remond)

	* src/mod_configure2.erl: Bugfix (thanks to Sergei Golovan)

	* src/msgs/ua.msg: New Ukrainian translation (thanks to usercard)

	* src/msgs/nl.msg: Updated (thanks to Sander Devrieze)

2004-07-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/eldap/eldap.erl: Bugfix

2004-07-13  Alexey Shchepin  <alexey@sevcom.net>

	* (all): ejabberd-0.7 released

	* src/web/ejabberd_web_admin.erl: Better i18n support (thanks to