@@ -15,9 +15,6 @@ AM_ICONV
 #locating libexpat
 AM_WITH_EXPAT
 
-
-   
-
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 
@@ -25,19 +22,21 @@ AC_C_CONST
 AC_FUNC_MALLOC
 AC_HEADER_STDC
 
-
 AC_MOD_ENABLE(mod_pubsub, yes)
 AC_MOD_ENABLE(mod_irc, yes)
 AC_MOD_ENABLE(mod_muc, yes)
 AC_MOD_ENABLE(eldap, yes)
 AC_MOD_ENABLE(web, yes)
+AC_MOD_ENABLE(tls, yes)
 
-	 
 AC_CONFIG_FILES([Makefile
                  $make_mod_irc
                  $make_mod_muc
                  $make_mod_pubsub
                  $make_eldap
                  $make_web
-                 stringprep/Makefile])
+                 stringprep/Makefile
+                 $make_tls])
+#openssl
+AM_WITH_OPENSSL
 AC_OUTPUT
